--- a/day-16-angular_forms/angular-forms/src/app/app.component.scss
+++ b/day-16-angular_forms/angular-forms/src/app/app.component.scss
@@ -7,6 +7,13 @@
 section {
   width: 100%;
   height: 6rem;
+  background: rgb(64, 35, 99);
+  background: linear-gradient(
+    90deg,
+    rgba(64, 35, 99, 1) 6%,
+    rgba(102, 109, 119, 1) 58%,
+    rgba(35, 130, 135, 1) 90%
+  );
   border-bottom: solid 1px gray;
   @include flex;
   gap: 2rem;
@@ -16,7 +23,7 @@ section {
     border-radius: 4px;
     font-weight: 500;
     letter-spacing: 0.2rem;
-    background-color: rgb(75, 74, 74);
+    background-color: rgb(53, 52, 52);
     color: white;
     transition: all ease-out 200ms;
 
@@ -34,7 +41,7 @@ section {
 
   .btn-temp {
     background-color: #ececec;
-    color: rgb(36, 36, 36);
+    color: rgb(29, 29, 29);
     &:hover {
       background-color: rgb(248, 247, 247);
     }
