--- a/day-18-AngularRouting/Angular_router/src/app/components/product/product.component.scss
+++ b/day-18-AngularRouting/Angular_router/src/app/components/product/product.component.scss
@@ -22,3 +22,13 @@ article {
     }
   }
 }
+
+@media (max-width: 768px) {
+  article {
+    height: 100vh;
+  }
+
+  section {
+    padding: 0 !important;
+  }
+}
