--- a/day-18-AngularRouting/Angular_router/src/app/components/products/products.component.scss
+++ b/day-18-AngularRouting/Angular_router/src/app/components/products/products.component.scss
@@ -43,3 +43,12 @@ article {
     }
   }
 }
+@media (max-width: 768px) {
+  article {
+    height: 160rem;
+  }
+
+  section {
+    flex-direction: column;
+  }
+}
