--- a/day-18-AngularRouting/Angular_router/src/app/app.component.html
+++ b/day-18-AngularRouting/Angular_router/src/app/app.component.html
@@ -1,17 +1,22 @@
 <header>
     <nav>
-        <ul>
-            <img width="6rem" src="header/logo.png" alt="">
+        <img width="6rem" src="header/logo.png" alt="Logo" />
+        <ul class="menu">
             <li><a routerLink="home">Home</a></li>
             <li><a routerLink="category">Category</a></li>
             <li><a routerLink="products">Products</a></li>
-            <li><a routerLink="">Other</a></li>
+            <li><a routerLink="other">Other</a></li>
         </ul>
+        <!-- Hamburger Icon -->
+        <div class="hamburger" (click)="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
     <div class="btn-grp">
         <button>Login</button>
         <button class="cart-btn">Cart</button>
     </div>
 </header>
-
 <router-outlet></router-outlet>
