--- a/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/customers/customers/customers.component.html
+++ b/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/customers/customers/customers.component.html
@@ -1,5 +1,12 @@
 <article>
     <section>
-        <img width="200px" src="customers.png" alt="">
+        <img src="customers.png" alt="">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis non consequatur doloremque doloribus sunt
+            corrupti nam ipsa libero, deleniti officiis possimus necessitatibus corporis quidem veritatis? Debitis
+            molestiae est non necessitatibus.
+            Repudiandae quo obcaecati ullam, deserunt mollitia eum blanditiis distinctio perspiciatis eaque unde quas,
+            est voluptatum libero assumenda omnis tempore praesentium, nobis alias optio recusandae? Eaque repellat
+            doloremque maiores ut in.</p>
     </section>
 </article>
