--- a/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/order/order/order.component.html
+++ b/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/order/order/order.component.html
@@ -1,1 +1,12 @@
-<p>order works!</p>
+<article>
+    <section>
+        <img src="order.jpg" alt="">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis non consequatur doloremque doloribus sunt
+            corrupti nam ipsa libero, deleniti officiis possimus necessitatibus corporis quidem veritatis? Debitis
+            molestiae est non necessitatibus.
+            Repudiandae quo obcaecati ullam, deserunt mollitia eum blanditiis distinctio perspiciatis eaque unde quas,
+            est voluptatum libero assumenda omnis tempore praesentium, nobis alias optio recusandae? Eaque repellat
+            doloremque maiores ut in.</p>
+    </section>
+</article>
