day 20 rest case complete

--- a/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/home/home.component.html
+++ b/day-19-Lazyloading_RoutesGuarding/lazyECommerce/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     </section>
 
     <main>
-        <!-- CanActive: <input #canactive (change)="checkBoxChange(CanActive.checked)"> -->
+        CanActive: <input #canactive (change)="checkBoxChange(CanActive.checked)">
     </main>
 
     <div>
